@@ -19,7 +19,7 @@
 
 AM_CFLAGS=-g -Wall -I$(top_builddir)/src
 AM_LDFLAGS=-L$(top_builddir)/src/ksi -no-install -lksi
-check_PROGRAMS=ksi_sign ksi_sign_aggr ksi_sign_multi ksi_extend ksi_verify ksi_verify_pub ksi_pubfiledump ksi_multisig_add ksi_multisig_extend multi_sign
+check_PROGRAMS=ksi_sign ksi_sign_aggr ksi_sign_multi ksi_blocksign ksi_extend ksi_verify ksi_verify_pub ksi_pubfiledump ksi_multisig_add ksi_multisig_extend multi_sign
 
 ksi_sign_SOURCES = \
 	ksi_sign.c \
@@ -56,4 +56,8 @@ multi_sign_SOURCES = \
 
 ksi_sign_multi_SOURCES = \
 	ksi_sign_multi.c \
+	ksi_common.c
+
+ksi_blocksign_SOURCES = \
+	ksi_blocksign.c \
 	ksi_common.c
