@@ -61,7 +61,8 @@ EXAMPLE_OBJ = \
 	$(OBJ_DIR)\ksi_multisig_add.ojb \
 	$(OBJ_DIR)\ksi_multisig_extend.ojb \
 	$(OBJ_DIR)\ksi_verify_pub.obj \
-	$(OBJ_DIR)\ksi_sign_multi.obj
+	$(OBJ_DIR)\ksi_sign_multi.obj \
+	$(OBJ_DIR)\ksi_blocksign.obj
 
 COMMON_OBJ = \
 	$(OBJ_DIR)\ksi_common.obj
@@ -76,7 +77,8 @@ EXAMPLE_BIN = \
 	$(BIN_DIR)\ksi_multisig_add.exe \
 	$(BIN_DIR)\ksi_multisig_extend.exe \
 	$(BIN_DIR)\ksi_verify_pub.exe \
-	$(BIN_DIR)\ksi_sign_multi.exe
+	$(BIN_DIR)\ksi_sign_multi.exe \
+	$(BIN_DIR)\ksi_blocksign.exe
 
 #external libraries used for linking.
 EXT_LIB = $(LIB_NAME)$(RTL).lib \
