@@ -1,3 +1,4 @@
+* IMPROVEMENT: Added block signature sample application.
 * IMPROVEMENT: Added example application for signing multiple files into multi-signature container.
 
 Version 3.8
